css/master.css
:root {
    --highlight: #c62828;
    --text-normal: #dadada;
    --subtle-light: #4B4B4B;
    --main-bg: #303030;
    --subtle-dark: #212121;
}

#home.frame-full {
    background-image: url("../imgs/home.png");
    /* background-image: linear-gradient(to top right, var(--subtle-dark), var(--main-bg)) !important; */
    /* background-color: #303030; */
    background-size: cover;
    position: relative;
}
#projects.frame-full {
    background-image: url("../imgs/projects.png");
    /* background-image: linear-gradient(to left, var(--subtle-dark), var(--main-bg)) !important; */
    /* background-color: #666666; */
    background-size: cover;
    position: relative;
}
#contact.frame-full {
    background-image: url("../imgs/contact.png");
    /* background-image: linear-gradient(to bottom right, var(--subtle-dark), var(--main-bg)) !important; */
    /* background-color: #303030; */
    background-size: cover;
    position: relative;
}
#about {
    background-image: url("../imgs/about.png");
    /* background-image: linear-gradient(to bottom right, var(--subtle-dark), var(--main-bg)) !important; */
    /* background-color: #303030; */
    background-size: cover;
    position: relative;
}
.frame-separator {
    margin: 0;
}
.middle {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    font-size: 10em;
}
.bottom-right {
    position: absolute;
    right: 5%;
    bottom: 5%;
}
.bottom-left {
    position: absolute;
    left: 5%;
    bottom: 5%;
}
.arrow-right-container i, .arrow-left-container i {
    font-size: 8em;
}
body {
    position: relative;
}
.nav {
    position: absolute;
    top: 1em;
    left: 50%;
    transform: translateX(-50%);
    z-index: 999;
}
.nav ul, .nav img, .nav li {
    display: inline;
}
.nav li {
    margin-right: 2em;
}
.logo {
    width: 3em;
    background-size: cover;
}
#home, #project, #contact, #about {
    display: table;
    width: 100%;
    /* text-align: center; */
}
#home .outside-container, #contact .outside-container, #projects .outside-container, #about .outside-container {
    /* position: absolute;
    top: 50%;
    transform: translateY(-50%); */
    width: 100vw !important;
    vertical-align: middle;
    display: table-cell;
    margin: auto;
}
#home h1, #home h2, #home h3 {
    margin: 0;
    padding: 0;
}
#contact .form-container {
    width: 35%;
    margin: auto;
    padding: 2em;
}
#contact h1 {
    margin: 0 0 0.5em 0;
    font-weight: bold;
}
#contact input, #contact textarea {
    border: 1px solid var(--text-normal);
    color: var(--text-normal);
    /* padding: 0 0.5em; */
    outline: none;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
    transition: none;
}
#contact input:focus, #contact textarea:focus {
    border: 1px solid var(--highlight);
    /* padding: 0 0.5em; */
}
#contact textarea {
    resize: vertical;
    height: 10em;
    overflow: auto;
    outline: none;
    -webkit-box-shadow: none;
    -moz-box-shadow: none;
    box-shadow: none;
}

#contact label {
    font-size: 1.2em;
}
#contact .submit {
    margin-top: 1em;
}
#contact .submit:hover {
    /* color: var(--highlight) !important; */
    border: 1px solid var(--highlight);
}
.tag-outer p {
    background: var(--subtle-light);
    display: inline;
    border-radius: 2em;
    padding: 0.3em 1.5em;
    color: var(--text-normal);
}
.pressed {
    background: var(--text-normal) !important;
    color: var(--main-bg) !important;
}
.project-container-inside {
    background: var(--subtle-light);
    padding: 1em;
    margin-bottom: 1em;
}
.project-container-inside img {
    max-width: 100%;
}
.project-container-outside {
    margin: 0;
}
div.footer {
    background: var(--subtle-light);
}
.footer hr.thin {
    margin: 0;
    height: 3px !important;
}
.footer .logo {
    margin: 5em 0;
}
.social {
    width: 3em;
    height: 3em;
    border: 2px solid var(--text-normal);
    border-radius: 50%;
    margin: auto;
}
html, body {
    height: 100%;
}
.footer .socials {
    margin-bottom: 3em;
}
.social, .social-container-outside {
    display: inline-block;
}
.social-container-outside {
    margin: 0 1.5em;
}
.social {
    position: relative;
    transition: all 0.3s ease-in-out;
}
.social:hover {
    background: var(--text-normal);
}
.social-icon {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    fill: var(--text-normal);
    transition: all 0.3s ease-in-out;
}
.social:hover .social-icon {
    fill: var(--subtle-dark);
}
.footer p {
    padding-bottom: 3em;
}
.nav li a{
    font-size: 1.2em;
}
.tag-outer, .tag-outer p {
    display: inline-block;
}
.tag-outer {
    margin: 0 1.5em;
}
.tag-outer p {
    font-size: 1.2em;
}
.form-container {
    margin: 6em auto !important;
}
.sidenav-trigger {
    color: var(--text-normal);
}
#slide-out {
    background-color: var(--subtle-light) !important;
}
#slide-out li a {
    color: var(--text-normal);
}
#projects h1 {
    margin: 2em 0;
}
.frame-full {
    min-height: 100vh !important;
    height: auto !important;
}

.testimonials-container {
    text-align: center;
    color: var(--text-normal) !important;
    margin-bottom: 10em;
    font-size: 1.2em;
    border-radius: 1.5em;
    background: var(--subtle-dark);
    border: 2px solid #424242;
    padding: 3em;
}
.testimonial {
    padding: 1.5em;
}
.testimonial:nth-of-type(1){
    border-bottom: 2px solid #424242;
}
.quote {
    font-size: 1.2em;
}
.who {
    font-size: 1.5em;
    font-weight: bold;
}
.testimonial a {
    color: var(--highlight) !important;
    transition: all 0.3s ease-in-out;
}
.testimonial a:hover {
    color: var(--text-normal) !important;
}
.testimonials-container .about-divider {
    height: 0.25em !important;
    width: 5em !important;
}
/* Mobile Styles */
@media only screen and (max-width: 1000px){
    #home h3 {
        font-size: 3.5em;
        margin-top: 0.3em;
    }
    #contact h1 {
        font-size: 3em;
    }
    #contact .form-container {
        width: 75%;
    }

    .arrow-right-container, .arrow-left-container {
        /* display: none; */
    }
    #home.frame-full, #projects.frame-full, #contact.frame-full {
        /* background-image: linear-gradient(to right, var(--subtle-dark), var(--main-bg)) !important; */
    }
    .frame-full {
        min-height: 100vh !important;
        height: auto !important;
    }
    .logo {
        margin: 3em 0 !important;
    }
    .nav .logo {
        margin: 0.5em 0 0 0 !important;
    }
    #projects h1{
        margin: 0.5em 0 !important;
    }
    .frame-separator {
        display: none !important;
    }
    #projects {
        padding: 5em 0;
    }
    .arrow-right-container i, .arrow-left-container i {
        font-size: 5em;
    }
    .bottom-right {
        bottom: 2% !important;
        right: 2% !important;
    }
    .bottom-left {
        bottom: 2% !important;
        left: 2% !important;
    }
    .transition-effect {
        width: 100vw !important;
        height: 200vh !important;
        background: var(--highlight) !important;
        bottom: 0 !important;
        left: 0% !important;
        transform: scaleY(0) !important;
        transition: all 0.8s ease-in-out !important;
    }
    .transition-effect.active {
        transform: scaleY(1) !important;
    }
    #about .container {
        width: 80% !important;
    }
}

#about h1 {
    text-align: center;
    margin-top: 1.5em;
}
#about hr.about-divider {
    width: 12em;
    height: 0.3em;
    border: none;
    background: var(--text-normal);
    margin: auto;
}
#about .bio-container {
    padding: 1em 2em;
    border-radius: 1.5em;
    background: var(--subtle-dark);
    margin-top: 5em;
    color: var(--text-normal);
    font-size: 1.3em;
}
#about .container {
    width: 50%;
}
#about .bio-container a {
    color: var(--text-normal) !important;
}
.tools-container {
  background: var(--subtle-dark);
  border-radius: 1em;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  color: var(--text-normal);
  border: 2px solid #424242;
  margin: 10em 0 16em 0;
  font-size: 1.1em;
}
.tools-container .col:nth-of-type(1) {
  border-right: 1px solid #424242;
}
.tools-container .col {
    padding: 4em 3em;
  text-align: center;
}
.tools-container .col h2 {
    font-size: 2.5em;
}
.text-highlight {
  font-size: 1.3em;
  color: var(--highlight) !important;
  font-weight: bold;
  margin-bottom: 0;
}
.normal-text {
  margin-top: 0.5em;
  margin-bottom: 2.5em;
  font-size: 1.15em;
}
/* TODO - media only screen and(mobile size) */
.tools-list {
  margin: 0.2em 0;
  font-size: 1.15em;
}
@media only screen and (max-width: 750px){
    .tools-container {
        grid-template-columns: 1fr;
    }
    .tools-container .col:nth-of-type(1) {
      border: none;
      border-bottom: 1px solid #424242;
    }
}
@media only screen and (max-width: 500px){
    #home h2 {
        font-size: 4em;
    }
    .tag-outer {
        margin: 0 0.1em;
    }
    .social-container-outside {
        margin: 0 0.2em;
    }
    #contact .form-container {
        width: 100%;
    }
    #home h3 {
        font-size: 2.5em;
    }
    #about .container {
        width: 90% !important;
    }
    .testimonials-container h2 {
        font-size: 2.5em;
    }
    .testimonials-container {
        padding: 1.5em !important;
    }
}

